# wolfsmuehle

./: Cargo.toml  README.md  build-gui.sh  build-server.sh  run-gui.sh  run-server.sh  wolfsmuehle.service
maintenance/: makerelease.sh  win-build.cmd
src/: board.rs  client.rs  coord.rs  game_state.rs  gtk_helpers.rs  main.rs  main_window.glade  main_window.rs  main_window.ui  net.rs  player.rs  print.rs  protocol.rs  random.rs  server.rs
src/game_state/: recorder.rs  serialize.rs
src/main_window/: PIC_LICENSES  drawing_area.rs  game_meta_view.rs  player_list.rs  sheep.xpm  wolf.xpm
src/net/: client.rs  consts.rs  data_repr.rs  protocol.rs  server.rs
src/net/server/: multicast.rs  room.rs
