# -*- coding: utf-8 -*-

[package]
edition         = "2024"
name            = "wolfsmuehle"
description     = "Wolfsmühle - Board game"
version         = "1.1.0"
homepage        = "https://bues.ch/"
license         = "GPL-2.0-or-later"
readme          = "README.md"
repository      = "https://bues.ch/cgit/wolfsmuehle.git"
authors         = ["Michael Buesch <m@bues.ch>"]

categories      = []
keywords        = ["boardgame"]
publish         = false

exclude         = ["/maintenance/"]

[features]
default         = ["gui", "server"]
gui             = ["cairo-rs", "gdk", "gdk-pixbuf", "gio", "glib", "gtk"]
server          = []

[dependencies]
anyhow          = "1"
itertools       = "0.10"
lazy_static     = "1"
rand            = "0.8"
structopt       = "0.3"

cairo-rs        = { version = "0.16", optional = true }
gdk             = { version = "0.16", optional = true }
gdk-pixbuf      = { version = "0.16", optional = true }
gio             = { version = "0.16", optional = true }
glib            = { version = "0.16", optional = true }
gtk             = { version = "0.16", optional = true }

[profile.release]
lto             = "thin"
overflow-checks = true

# vim: ts=4 sw=4 expandtab
