# -*- coding: utf-8 -*-

[package]
edition         = "2024"
name            = "wolfsmuehle"
description     = "Wolfsmühle - Board game"
version         = "1.1.0"
homepage        = "https://bues.ch/"
license         = "MIT OR Apache-2.0"
readme          = "README.md"
repository      = "https://bues.ch/cgit/wolfsmuehle.git"
authors         = ["Michael Buesch <m@bues.ch>"]

categories      = []
keywords        = ["boardgame"]
publish         = false

exclude         = ["/maintenance/"]

[features]
default         = ["gui", "server"]
gui             = ["dep:gtk4", "dep:gdk-pixbuf"]
server          = []

[dependencies]
anyhow          = "1"
itertools       = "0.14"
lazy_static     = "1"
rand            = "0.9"
clap            = { version = "4", features = [ "derive", "wrap_help", "unicode" ] }
gtk4            = { version = "0.10", optional = true }
gdk-pixbuf      = { version = "0.21", optional = true }

[profile.dev]
debug           = "limited"
panic           = "abort"

[profile.release]
lto             = "fat"
panic           = "abort"
strip           = "symbols"
overflow-checks = true
codegen-units   = 1

# vim: ts=4 sw=4 expandtab
